# gait-telemetry-orchestrator

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  alembic.ini  alert.rules.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci_cd.yml
alembic/: env.py
alembic/versions/: 094cedeef31b_add_email_to_users.py  0a289eaceb61_chore_db_merge_telemetry_token_and_.py  13aac6721dca_feat_update_patient_and_caretaker_.py  157ad1d052bb_partition_window_reports.py  242b98f29d3b_migrate_email_to_citext.py  3a1617257197_add_telemetry_token_to_patients.py  44268ef266c0_feat_initial_gait_analysis_schema.py  46c4d29f2ad1_feat_add_ondelete_restrict_to_reports.py  56b0ba9071c4_merge_alembic_heads.py  736d554f1558_add_session_reports_and_update_gait_.py  9f8c4d7a1b2e_drop_session_reports_table.py  ed0ae94d0ecb_add_avg_cadence_to_all_average_tables_.py  f39c2dac4f38_feat_add_monthly_and_yearly_avg.py  fd5c388e2451_fix_missing_weekly.py
app/: main.py
app/core/: benchmark.py  config.py  database.py  dependencies.py  security.py
app/models/: __init__.py  orm.py
app/schemas/: auth.py  caretaker_patients.py  mqtt_credential.py  patients.py  profiles.py  reports.py
app/services/: email.py
data/: gyro_shank_100hz2_inj_right.csv
tests/: conftest.py  simulate_mobile_app.py  test_health.py
tests/api/: test_auth.py  (+1 more)
workers/: batch_aggregator.py  cohort_schedule.py  ingestion_bridge.py  ml_worker.py  realtime_processor.py
(+6 files in other folders)
