[project]
name = "gait-telemetry-orchestrator"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
]
ignore = [
    "S101",  # allow assert in tests
    "B008",  # allow Depends() in function defaults (FastAPI pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
